public/stylesheets/style.css
header{
    flex-wrap: wrap;
}
.nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: rgb(2, 2, 20);
}
.webName{
    font-family: 'Bebas Neue', cursive;
    font-size: 50px;
    background-color: rgb(2, 2, 20);
    color: rgb(255, 250, 250);
    padding-left: 50px;
}
.navbar{
  background-color: rgb(2, 2, 20);
  padding-right: 30px;
}
.navbtn {
    border: none;
    padding: 5px;
    background: none;
    color: rgb(255, 250, 250);
    font-family: 'Glory', sans-serif;
    font-family: 'Libre Franklin', sans-serif;
    font-size: 18px;  
}
.jumbotron{
    background-image: url(../assets/lucas-andrade-M8uBaLEyGV4-unsplash.jpg);
    background-size: 1800px 800px;
    background-position: center;
    height: 500px;
}
.whoWeAre {
    border: black;
    padding: 20px 60px;
    background-color:white;
    color:rgb(2, 2, 20);
    text-align: center;
    font-family: 'Glory', sans-serif;
    font-family: 'Libre Franklin', sans-serif;
    font-family: 'Maven Pro', sans-serif;
}
.whoWeAre h2 {
    align-items: center;
    width: 38%;
    border-bottom: 2px solid black;
    padding-bottom: 15px;
    margin: auto;
    font-family: 'Glory', sans-serif;
    font-family: 'Libre Franklin', sans-serif;
    font-family: 'Maven Pro', sans-serif;  
}
.signup{
    text-align: center;
}
.signup h2 {
    align-items: center;
    width: 20%;
    border-bottom: 2px solid black;
    padding-bottom: 15px;
    margin: auto;
    font-family: 'Glory', sans-serif;
    font-family: 'Libre Franklin', sans-serif;
    font-family: 'Maven Pro', sans-serif;
}
.signupForm, .loginForm {
    display: inline-block;
    padding: 7px 15px;
    padding-top: 20px;
    font-size: 22px;
    width: 15%;
    margin-bottom: 15px;
    margin-top: 5px; 
    background-color: rgba(255, 255, 255, 0.75);
    font-family: 'Glory', sans-serif;
    font-family: 'Libre Franklin', sans-serif;
}
.signupForm input, .loginForm input {
    font-size: 15px;
    font-family: 'Glory', sans-serif;
    font-family: 'Libre Franklin', sans-serif;
}
.signupForm button, .loginForm button {
    border-radius: 5px;
    font-size: 18px;
    font-family: 'Glory', sans-serif;
    font-family: 'Libre Franklin', sans-serif;
}
.submit-btn, .email-label, .email-text, .password-label, .password-text, .username-label, .username-text {
    display: block;
    text-align: left;
    padding-bottom: 5px;
    padding-top: 5px;
}
.submit-btn {
    margin-top: 10px;
}
.login-h2 {
    align-items: center;
    width: 100%;
    border-bottom: 2px solid black;
    padding-bottom: 15px;
    margin: auto;
    font-family: 'Glory', sans-serif;
    font-family: 'Libre Franklin', sans-serif;
    font-family: 'Maven Pro', sans-serif;
}
.username-label-login {
    display: block;
    text-align: left;
    padding-bottom: 5px;
    padding-top: 15px; 
}

